@@ -335,11 +335,11 @@ AC_ARG_ENABLE([aboutme],
 AC_MSG_RESULT([$enable_aboutme])
 
 if test "x$enable_aboutme" = "xyes"; then
-  LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.3.0"
+  LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.7.90"
 
   AC_MSG_CHECKING(for evolution-data-server)
   if $PKG_CONFIG --exists libebook-1.2; then
-     LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.3.0"
+     LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.7.90"
      AC_DEFINE(BUILD_ABOUTME, 1, Build the about-me capplet)
        
      PKG_CHECK_MODULES(LIBEBOOK, libebook-1.2)
