@@ -1,3 +1,8 @@
+2006-08-07  Sebastien Bacher  <seb128@debian.org>
+
+	* gnome-about-me.c: (about_me_load_photo), (about_me_update_photo):
+	  - fix build with the new libebook API (Closes: #348821)
+
 2006-07-23  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-about-me.desktop.in.in: don't list the Application category, 
