@@ -1,3 +1,7 @@
+2006-08-07  Sebastien Bacher  <seb128@debian.org>
+
+	* configure.in: require libebook-1.2 1.7.90 for the new API
+
 2006-07-25  Sebastien Bacher  <seb128@debian.org>
 
 	* NEWS:
